--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Pretendard-Regular';
   }
   
   h1,
@@ -34,6 +35,13 @@
   ol {
     list-style: none
   }
+
+  @font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
 
   /* PC */
   @media (min-width:1024px) {
